force-app/main/default/objects/Lead/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>Additional Notes field from the FormStack</description>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>