force-app/main/default/objects/Lead/fields/Agent_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Agent_Qualification__c</fullName>
    <description>FOR AGENT: Was this candidate qualified or disqualified?</description>
    <inlineHelpText>FOR AGENT: Was this candidate qualified or disqualified?</inlineHelpText>
    <label>Agent Qualification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>