force-app/main/default/objects/Lead/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <displayFormat>PP-{0000}</displayFormat>
    <externalId>true</externalId>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>