force-app/main/default/objects/Lead/fields/Call_Back_Number__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_Number__c</fullName>
    <description>Can I have the best call back number in case we get disconnected or we need additional information? (FormStack question)</description>
    <inlineHelpText>Can I have the best call back number in case we get disconnected or we need additional information?</inlineHelpText>
    <label>Call Back Number</label>
    <type>Phone</type>
</CustomField>