force-app/main/default/objects/Lead/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualified - Retainer Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>