force-app/main/default/objects/Lead/fields/Caller_Recorded_Consent__c.field-meta.xml
<CustomField>
    <fullName>Caller_Recorded_Consent__c</fullName>
    <label>Caller Recorded Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>