force-app/main/default/objects/Lead/fields/Calling_for_yourself__c.field-meta.xml
<CustomField>
    <fullName>Calling_for_yourself__c</fullName>
    <label>Calling for yourself?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Someone Else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>