force-app/main/default/objects/Lead/fields/Campaign_f__c.field-meta.xml
<CustomField>
    <fullName>Campaign_f__c</fullName>
    <formula>IF(
    NOT(ISBLANK(Company__c)),
    Company__r.Parent.Name,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign formula</label>
    <type>Text</type>
</CustomField>