force-app/main/default/objects/Lead/fields/Company_Formula__c.field-meta.xml
<CustomField>
    <fullName>Company_Formula__c</fullName>
    <formula>Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Formula</label>
    <type>Text</type>
</CustomField>