force-app/main/default/objects/Lead/fields/Contacting_Consent__c.field-meta.xml
<CustomField>
    <fullName>Contacting_Consent__c</fullName>
    <description>Do we have full consents to reach out via phone, automated call, SMS/Text and email?</description>
    <label>Contacting Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>