force-app/main/default/objects/Lead/fields/Conversation_Language__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Language__c</fullName>
    <label>Conversation Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>