force-app/main/default/objects/Lead/fields/Date_Retainer_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Retainer_Sent__c</fullName>
    <label>Date Retainer Sent</label>
    <type>DateTime</type>
</CustomField>