force-app/main/default/objects/Lead/fields/Date_Signed__c.field-meta.xml
<CustomField>
    <fullName>Date_Signed__c</fullName>
    <label>Date Signed</label>
    <type>DateTime</type>
</CustomField>