force-app/main/default/objects/Lead/fields/fbclid__c.field-meta.xml
<CustomField>
    <fullName>fbclid__c</fullName>
    <label>fbclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>