force-app/main/default/objects/Lead/fields/First_Exposure_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Exposure_Date__c</fullName>
    <label>First Exposure Date</label>
    <type>Date</type>
</CustomField>