force-app/main/default/objects/Lead/fields/Fromstack_Submission__c.field-meta.xml
<CustomField>
    <fullName>Fromstack_Submission__c</fullName>
    <label>Fromstack Submission</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>