force-app/main/default/objects/Lead/fields/Intake_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Intake_Specialist__c</fullName>
    <label>Intake Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>