force-app/main/default/objects/Lead/fields/Is_from_Formstack__c.field-meta.xml
<CustomField>
    <fullName>Is_from_Formstack__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to skip duplicate rules</description>
    <label>Is from Formstack</label>
    <type>Checkbox</type>
</CustomField>