force-app/main/default/objects/Lead/fields/jornaya_leadid__c.field-meta.xml
<CustomField>
    <fullName>jornaya_leadid__c</fullName>
    <label>Jornaya Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>