force-app/main/default/objects/Lead/fields/Last_Exposure_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Exposure_Date__c</fullName>
    <label>Last Exposure Date</label>
    <type>Date</type>
</CustomField>