force-app/main/default/objects/Lead/fields/LP_Subid_1__c.field-meta.xml
<CustomField>
    <fullName>LP_Subid_1__c</fullName>
    <label>LP Subid 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>