force-app/main/default/objects/Lead/fields/LP_Subid_2__c.field-meta.xml
<CustomField>
    <fullName>LP_Subid_2__c</fullName>
    <label>LP Subid 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>