force-app/main/default/objects/Lead/fields/New_or_Existing_Client__c.field-meta.xml
<CustomField>
    <fullName>New_or_Existing_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>FormStack question</description>
    <label>New or Existing Client</label>
    <type>Checkbox</type>
</CustomField>