force-app/main/default/objects/Lead/fields/Signature_Mail_Request__c.field-meta.xml
<CustomField>
    <fullName>Signature_Mail_Request__c</fullName>
    <label>Signature/Mail Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>E-Signature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>