force-app/main/default/objects/Lead/fields/Signing_Authority_as__c.field-meta.xml
<CustomField>
    <fullName>Signing_Authority_as__c</fullName>
    <description>Field created for retainer, since we should show it and lead is the object for HelloSign</description>
    <label>Signing Authority as?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>As Executor of estate of</fullName>
            </value>
            <value>
                <fullName>As POA of</fullName>
            </value>
            <value>
                <fullName>As NOK of</fullName>
            </value>
            <value>
                <fullName>As individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>