force-app/main/default/objects/Lead/fields/source_did__c.field-meta.xml
<CustomField>
    <fullName>source_did__c</fullName>
    <label>Source did</label>
    <length>255</length>
    <type>Text</type>
</CustomField>