force-app/main/default/objects/Lead/fields/Source_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Source_Law_Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Law Firm</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>