force-app/main/default/objects/Lead/fields/subid_1__c.field-meta.xml
<CustomField>
    <fullName>subid_1__c</fullName>
    <label>subid 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>