force-app/main/default/objects/Lead/fields/subid_2__c.field-meta.xml
<CustomField>
    <fullName>subid_2__c</fullName>
    <label>subid 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>