force-app/main/default/objects/Lead/fields/subid_3__c.field-meta.xml
<CustomField>
    <fullName>subid_3__c</fullName>
    <label>subid 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>