force-app/main/default/objects/Lead/fields/TCPA_Consent_Date__c.field-meta.xml
<CustomField>
    <fullName>TCPA_Consent_Date__c</fullName>
    <label>TCPA Consent Date</label>
    <type>Date</type>
</CustomField>