force-app/main/default/objects/Lead/fields/trustedform_leadid__c.field-meta.xml
<CustomField>
    <fullName>trustedform_leadid__c</fullName>
    <label>TrustedForm Lead ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>