force-app/main/default/objects/Lead/fields/Unique_identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_identifier__c</fullName>
    <externalId>true</externalId>
    <label>Unique identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>