force-app/main/default/objects/Lead/listViews/Closed_Leads.listView-meta.xml
<ListView>
    <fullName>Closed_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Company__c</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Date_Signed__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Disqualified,Not interested</value>
    </filters>
    <label>Closed Leads</label>
</ListView>