force-app/main/default/objects/Lead/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Company__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Date_Signed__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Owner__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Disqualified,Not interested,Retainer signed</value>
    </filters>
    <label>My Leads</label>
</ListView>