force-app/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
    <fullName>TodaysLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>Campaign__c</columns>
    <columns>Company__c</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Date_Signed__c</columns>
    <columns>LEAD.LAST_UPDATE</columns>
    <columns>Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Leads</label>
</ListView>